:construction: : add days and hours available
