# src/shared/docs/swagger.json
@@ -887,6 +887,44 @@
         }
       }
     },
+    "/v1/users/providers/availabilities": {
+      "get": {
+        "tags": [
+          "Users Providers"
+        ],
+        "summary": "Users providers get all availabilities days and hours",
+        "description": "Users providers get all availabilities days and hours",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/response_users_providers_days_hours_availabilities"
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/Not_Found"
+          },
+          "500": {
+            "$ref": "#/components/responses/Internal_Server_Error"
+          }
+        }
+      }
+    },
     "/v1/users/providers/services": {
       "patch": {
         "tags": [
@@ -1277,6 +1315,241 @@
           },
           "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpVCJ9.eyJlbWFpbCI6ImFuZGVyc29uZnJmaWxob0BnbWFpbC5jb20iLCJpYXQiOjE2MjE5MTM4MjMsImV4cCI6MTYyNDUwNTgyMywic3ViIjoie1widXNlclwiOntcImlkXCI6XCI4MDhiNDViOC1mZmVkLTQxNjgtOWI0ZS04ZDA0NGQ0NTNjMGJcIixcImFjdGl2ZVwiOnRydWV9fSJ9.tGJJILTZelVtYVIMvvwa7oH3Rm72ab6DjJc8Vj1QSA",
           "refresh_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpVCJ9.eyJlbWFpbCI6ImFuZGVyc29uZnJmaWxob0BnbWFpbC5jb20iLCJpYXQiOjE2MjE5MTM4MjMsImV4cCI6MTYyNDUwNTgyMywic3ViIjoie1widXNlclwiOntcImlkXCI6XCI4MDhiNDViOC1mZmVkLTQxNjgtOWI0ZS04ZDA0NGQ0NTNjMGJcIixcImFjdGl2ZVwiOnRydWV9fSJ9.tGJJILTZelVtYVIMvvwa7oH3Rm72ab6DjJc8Vj1QSA"
+        }
+      },
+      "response_users_providers_days_hours_availabilities": {
+        "type": "object",
+        "properties": {
+          "days": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "day": {
+                  "type": "string",
+                  "enum": [
+                    "MONDAY",
+                    "TUESDAY",
+                    "WEDNESDAY",
+                    "THURSDAY",
+                    "FRIDAY",
+                    "SATURDAY",
+                    "SUNDAY"
+                  ]
+                }
+              }
+            }
+          },
+          "hours": {
+            "type": "array",
+            "enum": [
+              "00:00",
+              "00:15",
+              "00:30",
+              "00:45",
+              "01:00",
+              "01:15",
+              "01:30",
+              "01:45",
+              "02:00",
+              "02:15",
+              "02:30",
+              "02:45",
+              "03:00",
+              "03:15",
+              "03:30",
+              "03:45",
+              "04:00",
+              "04:15",
+              "04:30",
+              "04:45",
+              "05:00",
+              "05:15",
+              "05:30",
+              "05:45",
+              "06:00",
+              "06:15",
+              "06:30",
+              "06:45",
+              "07:00",
+              "07:15",
+              "07:30",
+              "07:45",
+              "08:00",
+              "08:15",
+              "08:30",
+              "08:45",
+              "09:00",
+              "09:15",
+              "09:30",
+              "09:45",
+              "10:00",
+              "10:15",
+              "10:30",
+              "10:45",
+              "11:00",
+              "11:15",
+              "11:30",
+              "11:45",
+              "12:00",
+              "12:15",
+              "12:30",
+              "12:45",
+              "13:00",
+              "13:15",
+              "13:30",
+              "13:45",
+              "14:00",
+              "14:15",
+              "14:30",
+              "14:45",
+              "15:00",
+              "15:15",
+              "15:30",
+              "15:45",
+              "16:00",
+              "16:15",
+              "16:30",
+              "16:45",
+              "17:00",
+              "17:15",
+              "17:30",
+              "17:45",
+              "18:00",
+              "18:15",
+              "18:30",
+              "18:45",
+              "19:00",
+              "19:15",
+              "19:30",
+              "19:45",
+              "20:00",
+              "20:15",
+              "20:30",
+              "20:45",
+              "21:00",
+              "21:15",
+              "21:30",
+              "21:45",
+              "22:00",
+              "22:15",
+              "22:30",
+              "22:45",
+              "23:00",
+              "23:15",
+              "23:30",
+              "23:45"
+            ]
+          }
+        },
+        "example": {
+          "days": [
+            "MONDAY",
+            "TUESDAY",
+            "WEDNESDAY",
+            "THURSDAY",
+            "FRIDAY",
+            "SATURDAY",
+            "SUNDAY"
+          ],
+          "hours":  [
+            "00:00",
+            "00:15",
+            "00:30",
+            "00:45",
+            "01:00",
+            "01:15",
+            "01:30",
+            "01:45",
+            "02:00",
+            "02:15",
+            "02:30",
+            "02:45",
+            "03:00",
+            "03:15",
+            "03:30",
+            "03:45",
+            "04:00",
+            "04:15",
+            "04:30",
+            "04:45",
+            "05:00",
+            "05:15",
+            "05:30",
+            "05:45",
+            "06:00",
+            "06:15",
+            "06:30",
+            "06:45",
+            "07:00",
+            "07:15",
+            "07:30",
+            "07:45",
+            "08:00",
+            "08:15",
+            "08:30",
+            "08:45",
+            "09:00",
+            "09:15",
+            "09:30",
+            "09:45",
+            "10:00",
+            "10:15",
+            "10:30",
+            "10:45",
+            "11:00",
+            "11:15",
+            "11:30",
+            "11:45",
+            "12:00",
+            "12:15",
+            "12:30",
+            "12:45",
+            "13:00",
+            "13:15",
+            "13:30",
+            "13:45",
+            "14:00",
+            "14:15",
+            "14:30",
+            "14:45",
+            "15:00",
+            "15:15",
+            "15:30",
+            "15:45",
+            "16:00",
+            "16:15",
+            "16:30",
+            "16:45",
+            "17:00",
+            "17:15",
+            "17:30",
+            "17:45",
+            "18:00",
+            "18:15",
+            "18:30",
+            "18:45",
+            "19:00",
+            "19:15",
+            "19:30",
+            "19:45",
+            "20:00",
+            "20:15",
+            "20:30",
+            "20:45",
+            "21:00",
+            "21:15",
+            "21:30",
+            "21:45",
+            "22:00",
+            "22:15",
+            "22:30",
+            "22:45",
+            "23:00",
+            "23:15",
+            "23:30",
+            "23:45"
+          ]
         }
       },
       "request_users_sessions_refresh_token": {
